syntax = "proto3";

package xyz.featherhead.api;
option go_package = "svcauth";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message AuthnRule {
  option (gogoproto.gostring) = true;

  // Path to caller field
  string caller = 1;

  // Strategies used to authenticate.
  repeated string strategy = 2 [(gogoproto.customname) = "Strategies"];
}
